# quant_ui

./: .gitignore  ARCHITECTURE_UI.md  README.md  package-lock.json  package.json  pyproject.toml  research_desk_plan.md
app/: __init__.py  calendar.py  duckdb.py  instruments.py  main.py  paths.py  qlib_init.py
app/static/: app.css  app.js  feature_power.html  feature_power.js  index.html
backend/: .env.example  QuantReadMe.md  README.md  import_check.py  requirements.txt
backend/app/: __init__.py  engine_adapter.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: control.py  panel.py  routes.py  schemas.py
backend/app/artifacts/: atomic.py  manifest.py
backend/app/cli/: build_manifest.py  normalize.py
backend/app/control/: jobs.py  registry.py
backend/app/core/: __init__.py  config.py
backend/app/data/: contract.py  training_view.py
backend/app/providers/: config_strategy_provider.py  json_provider.py
backend/app/scripts/: generate_artifacts.py
backend/artifacts/: manifest.json
backend/artifacts/jobs/: jobs.jsonl
backend/tests/: test_contract_scan.py
configs/: feature_settings.json  paths.yaml
docs/: research_desk_plan.md
frontend/: README.md  package-lock.json
frontend/src/lib/: index.ts
frontend/src/lib/api/: client.ts  types.ts
frontend/src/lib/components/: Histogram.svelte  LineChart.svelte  MonthlyHeatmap.svelte  ReturnsBarChart.svelte
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/artifacts/: +page.svelte
frontend/src/routes/catalog/: +page.svelte  +page.ts
(+8 files in other folders)
